# mmdet_pl

./: .gitignore  .pre-commit-config.yaml  README.md  dataset.py  pyproject.toml  requirements.txt  train.py
configs/: faster_rcnn_r50_fpn.py
